--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "docker-images",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "dev": "node ./src/index.js"
   },
