--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/Renan1fps/docker-images#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "axios": "^0.26.1",
+    "express": "^4.17.1",
+    "socket.io-client": "^4.4.1"
   }
 }
